test/tests/compiler/18_structures/invalid_lex/magic_define.etc
m4_define(`MAGIC_VAL', 42)m4_dnl
